# E3SM

./: .gitmodules
cime_config/allactive/: config_compsets.xml
cime_config/machines/: config_compilers.xml
components/: CMakeLists.txt
components/cmake/: build_model.cmake
components/demsi/: CMakeLists.txt
components/demsi/cime_config/: buildlib_cmake  buildnml  config_component.xml  config_compsets.xml  config_defaults.xml
components/demsi/driver/: CMakeLists.txt  ice_comp_mct.F
components/mpas-framework/src/framework/: mpas_io_streams.F  mpas_log.F  mpas_stream_manager.F
components/mpas-ocean/src/: Makefile  Registry.xml  seaice_column
components/mpas-ocean/src/driver/: mpas_ocn_core_interface.F
components/mpas-ocean/src/mode_forward/: mpas_ocn_forward_mode.F
components/mpas-ocean/src/seaice/: Makefile  Registry_seaice.xml  Registry_seaice_column.xml  Registry_seaice_column_dimensions.xml  Registry_seaice_forcing_and_coupling.xml  Registry_seaice_state.xml  analysis_members  column  mpas_ocn_seaice_column.F  setup_packages_column_physics.inc  shared
components/mpas-ocean/src/seaice_driver/: Makefile  mpas_ocn_seaice_column.F  mpas_seaice_column.F  mpas_seaice_constants.F  mpas_seaice_error.F
components/mpas-ocean/src/shared/: mpas_ocn_frazil_forcing.F  mpas_ocn_time_varying_forcing.F
components/mpas-seaice/bld/: build-namelist  build-namelist-section
components/mpas-seaice/bld/namelist_files/: namelist_defaults_mpassi.xml  namelist_definition_mpassi.xml
components/mpas-seaice/cime_config/: buildnml
components/mpas-seaice/driver/: ice_comp_mct.F  mpassi_cpl_indices.F
components/mpas-seaice/src/: Registry.xml  Registry_seaice_column.xml  Registry_seaice_column_dimensions.xml  Registry_seaice_forcing_and_coupling.xml  Registry_seaice_prescribed_ice.xml  Registry_seaice_state.xml  Registry_seaice_transport.xml  Registry_seaice_velocity_solver.xml
components/mpas-seaice/src/analysis_members/: Registry_seaice_analysis_members_in_ocean.xml  Registry_seaice_regional_statistics.xml  mpas_seaice_TEMPLATE.F  mpas_seaice_analysis_driver.F  mpas_seaice_area_variables.F  mpas_seaice_conservation_check.F  mpas_seaice_geographical_vectors.F  mpas_seaice_high_frequency_output.F  mpas_seaice_ice_present.F  mpas_seaice_ice_shelves.F  mpas_seaice_load_balance.F  mpas_seaice_maximum_ice_presence.F  mpas_seaice_miscellaneous.F  mpas_seaice_pointwise_stats.F  mpas_seaice_pond_diagnostics.F  mpas_seaice_regional_statistics.F  mpas_seaice_ridging_diagnostics.F  mpas_seaice_temperatures.F  mpas_seaice_time_series_stats.F  mpas_seaice_unit_conversion.F
components/mpas-seaice/src/column/: ice_colpkg.F90  ice_mushy_physics.F90  ice_shortwave.F90  ice_therm_vertical.F90
components/mpas-seaice/src/model_forward/: mpas_seaice_core.F  mpas_seaice_core_interface.F  (+1 more)
driver-mct/shr/: seq_flds_mod.F90
(+23 files in other folders)
